<resources>
    <string name="app_name">IllustrateMe</string>
    <string name="tv_welcome">Welcome to IllustrateMe,</string>
    <string name="tv_signin">Sign In to Continue</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="tv_signup">Sign Up to Continue</string>
    <string name="tv_name">Name</string>
    <string name="tv_notRegistered">Not Registered Yet,</string>
    <string name="tv_Registered">Already Registered,</string>
    <string name="tv_toSignIn"> Sign In !</string>
    <string name="tv_toSignUp"> Sign Up !</string>
    <string name="button_signup">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Keywords …</string>
    <string name="signout">Sign Out</string>
    <string name="upload">Upload</string>
    <string name="preview_image">Preview Image</string>
    <string name="gallery">Open Gallery</string>
    <string name="enter_desc">Enter Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="portfolio">Portfolio</string>
    <string name="iv_post">Post Image</string>
    <string name="image_splashscreen">image_splashscreen</string>
    <string name="tv_username">Username</string>
    <string name="retry">Try Again</string>
    <string name="user_name">username</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="tv_contactme">if you are interested, please contact me at</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="illustrator_profile">Illustrator Profile</string>
</resources>